--- a/LockView/app/src/main/res/layout/activity_main.xml
+++ b/LockView/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,27 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment"
-    android:name="io.github.johnfeng.lockview.fragment.MainActivityFragment"
-    tools:layout="@layout/fragment_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".MainActivityFragment"
+    >
+
+    <com.astuetz.PagerSlidingTabStrip
+        android:id="@+id/home_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        app:pstsIndicatorColor="@color/green"
+        app:pstsIndicatorHeight="3dp"
+        app:pstsShouldExpand="true"
+        app:pstsUnderlineHeight="0dp"
+        />
+
+    <io.github.johnfeng.lockview.widget.HackViewPager
+        android:id="@+id/home_view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
+</LinearLayout>
