--- a/LockView/app/src/main/res/values/styles.xml
+++ b/LockView/app/src/main/res/values/styles.xml
@@ -1,9 +1,15 @@
 <resources>
 
-    <!-- Base application theme. -->
+    <style name="AppTheme.Base"
+        parent="Theme.AppCompat">
+        <item name="windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@color/white</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
     <style name="AppTheme"
-        parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        parent="AppTheme.Base">
     </style>
 
 </resources>
