add image intro fragment

--- a/LockView/app/src/main/res/values/colors.xml
+++ b/LockView/app/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="green">#9dde14</color>
     <color name="orange">#fa512d</color>
     <color name="splash">#da5547</color>
+    <color name="purple">#A020F0</color>
 
     <!-- text -->
     <color name="text_red">#a3674a</color>
