Set Topic Fragment

--- a/LockView/app/src/main/res/layout/fragment_intro_image.xml
+++ b/LockView/app/src/main/res/layout/fragment_intro_image.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="10dp"
         android:background="@color/purple"
         android:padding="15dp"
         android:text="@string/intro_image_title"
@@ -42,7 +43,7 @@
                 style="@style/Text.LockView.H2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
+                android:layout_marginTop="10dp"
                 android:padding="15dp"
                 android:text="@string/intro_image_title_1"
                 android:textColor="@color/purple"
@@ -53,7 +54,7 @@
                 style="@style/Text.LockView.P3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
+                android:layout_marginTop="10dp"
                 android:padding="15dp"
                 android:text="@string/intro_image_content_1"
                 android:textColor="@color/white"
@@ -64,7 +65,7 @@
                 style="@style/Text.LockView.H2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
+                android:layout_marginTop="10dp"
                 android:padding="15dp"
                 android:text="@string/intro_image_title_2"
                 android:textColor="@color/purple"
@@ -75,7 +76,7 @@
                 style="@style/Text.LockView.P3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
+                android:layout_marginTop="10dp"
                 android:padding="15dp"
                 android:text="@string/intro_image_content_2"
                 android:textColor="@color/white"
