--- a/LockView/app/src/main/res/values/colors.xml
+++ b/LockView/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="orange">#fa512d</color>
     <color name="splash">#da5547</color>
     <color name="purple">#A020F0</color>
+    <color name="purple_translucent">#EEA020F0</color>
 
     <!-- text -->
     <color name="text_red">#a3674a</color>
